...
    val color = MaterialTheme.colors.surface
    val temperatureUnit = homeScreenViewModel.temperatureUnit
    val cityDetails = homeScreenViewModel.listCities[homeScreenViewModel.selectedCity.value]
    val bottomSheetScaffoldState = rememberBottomSheetScaffoldState()
    Scaffold(
        modifier = Modifier
            .testTag("Home Screen")
            .padding(bottom = 40.dp)
    ) {
        BottomSheetScaffold(
            sheetContent = {
                BottomSheetContent(
                    bottomSheetScaffoldState = bottomSheetScaffoldState,
...
                                style = MaterialTheme.typography.body2.copy(color)
                            )
                        }
                    }
                    Row(
                        modifier = Modifier
                            .testTag("Temperature Unit")
                            .semantics(mergeDescendants = true) {}
                    ) {
                        val temp = getTemperature(
                            cityDetails.hourlyDayDetail[0].temp,
                            cityDetails.hourlyDayDetail[0].type, temperatureUnit.value
                        ).removeSuffix("°")
...
            imageVector = Icons.Filled.Settings,
            contentDescription = stringResource(R.string.description_settings),
            tint = iconColor,
            modifier = Modifier
                .align(Alignment.CenterEnd)
                .size(48.dp)
                .clickable { navController.navigate("Settings") }
                .padding(12.dp)
        )
    }
}

@Composable
fun DropDownCities(iconColor: Color, homeScreenViewModel: HomeScreenViewModel, name: String) {
    var expand by remember { mutableStateOf(false)}
    Box {
        Row(
            modifier = Modifier
                .padding(12.dp)
                .testTag("Added Cities")
                .semantics(mergeDescendants = true) {}
                .clickable { expand = true },
            horizontalArrangement = Arrangement.Center
        ) {
            Text(
                text = name,
...
            )
        }
        DropdownMenu(
            expanded = expand,
            onDismissRequest = { expand = false },
            modifier = Modifier
                .testTag("Cities")
                .background(MaterialTheme.colors.primary)
                .align(Alignment.Center),
            offset = DpOffset(12.dp,0.dp)
        ) {
            homeScreenViewModel.listCities.forEachIndexed { index, city ->
                DropdownMenuItem(
...
