<resources>
    <!--
      Copyright 2020 The Android Open Source Project
      Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
      in compliance with the License. You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
      Unless required by applicable law or agreed to in writing, software distributed under the License
      is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
      or implied. See the License for the specific language governing permissions and limitations under
      the License.
      -->
    <string name="app_name">AndroidDevChallenge</string>
    <string name="today">Today</string>
    <string name="day">Thu, 18 March</string>
    <string name="description_hourly_forecasts">Hourly Forecasts</string>
    <string name="details">Details</string>
    <string name="next_few_days">Next 9 days</string>
    <string name="description_close">Close</string>
    <string name="description_settings">Settings</string>
    <string name="select_city">Select the city</string>
    <string name="my_location">My Location</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="description_delete">Delete</string>
    <string name="description_back">Back</string>
    <string name="add_city">Add City</string>
    <string name="temperature">%s%s</string>
    <string name="description_temperature">%s degree %s</string>
    <string name="short_weather_details">Feel like %s° H:%s° L:%s°"</string>
    <string name="short_description_weather">
        Feel like %s° : High Temperature:%s° : Low Temperature:%s°
    </string>
    <string name="description_chance">chance %s</string>
    <string name="description_day_details">%s %s %s High %s Low %s"</string>
    <string name="forecast_details">%s %s %s</string>
    <string name="description_location">%s Location</string>
</resources>