...

@Composable
fun ClearSkyBackground(){
    Image(
        painter = painterResource(id = R.drawable.ic_clear_sky_bg),
        contentDescription = null,
        modifier = Modifier.testTag("Clear Sky Background").fillMaxSize(),
        contentScale = ContentScale.Crop
    )
}

@Composable
fun ClearSkyAnimation(){
    Box(
        modifier = Modifier.testTag("Clear Sky Animation")
            .height(250.dp)
            .fillMaxWidth()
    ) {
        SparklingStar(image = R.drawable.ic_star_bg1)
        SparklingStar(delayMillis = 150,
            modifier = Modifier
...
