...
@Composable
fun BottomSheetContentForShowCities(
    homeScreenViewModel: HomeScreenViewModel,
    bottomSheetScaffoldState: BottomSheetScaffoldState,
    coroutineScope: CoroutineScope
) {
    LazyColumn(modifier = Modifier.testTag("Show Cities")) {
        item {
            Row(
                modifier = Modifier.padding(16.dp)
            ) {
                Text(
                    text = stringResource(R.string.select_city),
...
